--- a/index.html
+++ b/index.html
@@ -1,18 +1,103 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Japanese Shrine Explorer Support</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: sans-serif; line-height: 1.6; padding: 2em; }
-        h1 { color: #333; }
-        a { color: #007bff; }
+        body {
+            font-family: 'Noto Sans JP', sans-serif;
+            background-color: #f8f9fa; /* Light background */
+        }
+        .hero-section {
+            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('https://images.unsplash.com/photo-1545569341-9eb8b30979d9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80') no-repeat center center; /* Example background - replace if desired */
+            background-size: cover;
+            color: white;
+            padding: 6rem 1rem;
+            text-align: center;
+            margin-bottom: 3rem;
+            border-radius: 0 0 15px 15px;
+        }
+        .hero-section h1 {
+            font-weight: 700;
+            font-size: 2.8rem;
+        }
+         .hero-section p {
+            font-size: 1.2rem;
+            font-weight: 300;
+        }
+        .support-box {
+            background-color: white;
+            padding: 2rem;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            text-align: center;
+        }
+         .support-box h2 {
+            color: #B22222; /* Firebrick red - adjust as needed */
+            margin-bottom: 1.5rem;
+         }
+         .support-box a {
+            color: #DC143C; /* Crimson red - adjust as needed */
+            font-weight: bold;
+         }
+        footer {
+            margin-top: 4rem;
+            padding: 2rem 0;
+            background-color: #e9ecef;
+            color: #6c757d;
+            text-align: center;
+            font-size: 0.9rem;
+        }
+         footer a {
+            color: #495057;
+            text-decoration: none;
+            margin: 0 10px;
+         }
+         footer a:hover {
+            text-decoration: underline;
+         }
     </style>
 </head>
 <body>
-    <h1>Japanese Shrine Explorer Support</h1>
-    <p>Welcome to the support page for the Japanese Shrine Explorer app.</p>
-    <p>If you need assistance, have questions, or want to provide feedback, please contact us at:</p>
-    <p><a href="mailto:mccloskeyben2@gmail.com">mccloskeyben2@gmail.com</a></p> 
-    <p>We will do our best to respond as quickly as possible.</p>
+
+    <div class="hero-section">
+        <div class="container">
+            <h1>Japanese Shrine Explorer</h1>
+            <p class="lead">Your guide to Japan's sacred sites.</p>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="support-box">
+                    <h2>Support Center</h2>
+                    <p class="lead">Welcome to the support page for the Japanese Shrine Explorer app.</p>
+                    <hr class="my-4">
+                    <p>If you require assistance, have questions about app features, or wish to provide feedback, please don't hesitate to reach out.</p>
+                    <p>Contact our support team via email:</p>
+                    <p>
+                        <a href="mailto:mccloskeyben2@gmail.com" class="btn btn-danger btn-lg">mccloskeyben2@gmail.com</a>
+                        </p>
+                    <p class="mt-4">We strive to respond to all inquiries as promptly as possible.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="container">
+             © 2025 Japanese Shrine Explorer | 
+            <a href="privacy.html">Privacy Policy</a> | 
+            <a href="terms.html">Terms of Service</a>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
