Fixed email typo

--- a/privacy.html
+++ b/privacy.html
@@ -99,7 +99,7 @@
             </ul>
 
             <h2>Contact</h2>
-            <p>Questions? Contact us at <a href="mailto:support@yourappdomain.com">support@yourappdomain.com</a>.</p> 
+            <p>Questions? Contact us at <a href="mailto:mccloskeyben2@gmail.com">mccloskeyben2@gmail.com</a>.</p> 
             </div>
     </div>
 
